fix /about items overflow

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -13,6 +13,7 @@
 
 #feedback h1,
 #about-us h1 {
+	position: relative;
 	margin: 15px 0 0 0;
 	padding: 0;
 	font-size: 4rem;
@@ -53,11 +54,7 @@
 	color: white;
 	font-size: 1.2rem;
 	background: rgb(19, 156, 97);
-	background: linear-gradient(
-		135deg,
-		rgba(19, 156, 97, 1) 0%,
-		rgba(10, 78, 49, 1) 100%
-	);
+	background: linear-gradient(135deg, rgba(19, 156, 97, 1) 0%, rgba(10, 78, 49, 1) 100%);
 	border-radius: 20px;
 	transition: 0.2s all ease-in-out;
 	-webkit-box-shadow: 0px 15px 40px 0px rgba(0, 0, 0, 0.41);
@@ -77,11 +74,7 @@
 	color: white;
 	font-size: 1.2rem;
 	background: rgb(228, 67, 94);
-	background: linear-gradient(
-		135deg,
-		rgba(228, 67, 94, 1) 0%,
-		rgba(114, 34, 47, 1) 100%
-	);
+	background: linear-gradient(135deg, rgba(228, 67, 94, 1) 0%, rgba(114, 34, 47, 1) 100%);
 	border-radius: 20px;
 	transition: 0.2s all ease-in-out;
 	-webkit-box-shadow: 0px 15px 40px 0px rgba(0, 0, 0, 0.41);
@@ -99,11 +92,7 @@
 	color: white;
 	font-size: 1.2rem;
 	background: rgb(19, 156, 97);
-	background: linear-gradient(
-		135deg,
-		rgba(19, 156, 97, 1) 0%,
-		rgba(10, 78, 49, 1) 100%
-	);
+	background: linear-gradient(135deg, rgba(19, 156, 97, 1) 0%, rgba(10, 78, 49, 1) 100%);
 	border-radius: 20px;
 	transition: 0.2s all ease-in-out;
 	-webkit-box-shadow: 0px 15px 40px 0px rgba(0, 0, 0, 0.41);
